--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from os.path import join, exists, isfile, isdir\n",
+    "from os import makedirs, listdir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "18bae153-12a9-4e0d-bfc1-b210a8c89f76",
    "metadata": {},
    "outputs": [],
