--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -17,6 +17,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "942890ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = join('..', 'data')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "18bae153-12a9-4e0d-bfc1-b210a8c89f76",
    "metadata": {},
