--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -11,8 +11,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from os.path import join, exists, isfile, isdir\n",
-    "from os import makedirs, listdir"
+    "from os.path import join, exists, isfile, isdir, abspath, dirname, basename\n",
+    "from os import makedirs, listdir, pardir"
    ]
   },
   {
