--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -17,24 +17,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "942890ed",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'join' is not defined",
+     "evalue": "name '__file__' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[43mjoin\u001b[49m(pardir, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'join' is not defined"
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m join(dirname(abspath(\u001b[38;5;18;43m__file__\u001b[39;49m)), pardir, pardir, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m data_dir\n",
+      "\u001b[0;31mNameError\u001b[0m: name '__file__' is not defined"
      ]
     }
    ],
    "source": [
-    "data_dir = join(pardir, 'data')\n",
+    "data_dir = join(dirname(abspath(__file__)), pardir, pardir, 'data')\n",
     "data_dir"
    ]
   },
