--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -12,7 +12,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename\n",
-    "from os import makedirs, listdir, pardir"
+    "from os import makedirs, listdir, pardir\n",
+    "\n",
+    "from "
    ]
   },
   {
