--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -14,7 +14,7 @@
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename\n",
     "from os import makedirs, listdir, pardir\n",
     "\n",
-    "from "
+    "from IPython"
    ]
   },
   {
