--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from os.path import join, exists, isfile, isdir, abspath, dirname, basename\n",
+    "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
