--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a0749b7d",
    "metadata": {},
    "outputs": [
@@ -30,13 +30,13 @@
        "'/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/src/notebooks/__file__'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "realpath('__file__')"
+    "abspath('__file__')"
    ]
   },
   {
