--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -20,23 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a0749b7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/src/notebooks/__file__'"
+       "'__file__'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "realpath(\"__file__\")"
+    "basename(\"__file__\")"
    ]
   },
   {
