Work in progress

--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -20,23 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a0749b7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'__file__'"
+       "'/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/src/notebooks'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dirname(basename(\"__file__\")"
+    "dirname(realpath(\"__file__\"))"
    ]
   },
   {
@@ -46,6 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "current\n",
     "data_dir = join(dirname(abspath(__file__)), pardir, pardir, 'data')\n",
     "data_dir"
    ]
