Work in progress

--- a/src/notebooks/graph_lab_220923.ipynb
+++ b/src/notebooks/graph_lab_220923.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
-    "from os import makedirs, listdir, pardir\n",
+    "from os import makedirs, listdir, pardir, getcwd\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -20,34 +20,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "a0749b7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/src/notebooks'"
+       "'/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dirname(realpath(\"__file__\"))"
+    "abspath(join(join(getcwd(), pardir), pardir))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "942890ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/data'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "current\n",
-    "data_dir = join(dirname(abspath(__file__)), pardir, pardir, 'data')\n",
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, 'data')\n",
     "data_dir"
    ]
   },
