--- a/src/notebooks/networkx_example.ipynb
+++ b/src/notebooks/networkx_example.ipynb
@@ -31,6 +31,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "d6014333",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mayavi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnetworkx\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnx\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmayavi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mlab\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# some graphs to try\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# H=nx.krackhardt_kite_graph()\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# H=nx.Graph();H.add_edge('a','b');H.add_edge('a','c');H.add_edge('a','d')\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# H=nx.grid_2d_graph(4,5)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m H \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mcycle_graph(\u001b[38;5;241m20\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mayavi'"
+     ]
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "from mayavi import mlab\n",
+    "\n",
+    "# some graphs to try\n",
+    "# H=nx.krackhardt_kite_graph()\n",
+    "# H=nx.Graph();H.add_edge('a','b');H.add_edge('a','c');H.add_edge('a','d')\n",
+    "# H=nx.grid_2d_graph(4,5)\n",
+    "H = nx.cycle_graph(20)\n",
+    "\n",
+    "# reorder nodes from 0,len(G)-1\n",
+    "G = nx.convert_node_labels_to_integers(H)\n",
+    "# 3d spring layout\n",
+    "pos = nx.spring_layout(G, dim=3, seed=1001)\n",
+    "# numpy array of x,y,z positions in sorted node order\n",
+    "xyz = np.array([pos[v] for v in sorted(G)])\n",
+    "# scalar colors\n",
+    "scalars = np.array(list(G.nodes())) + 5\n",
+    "\n",
+    "mlab.figure()\n",
+    "\n",
+    "pts = mlab.points3d(\n",
+    "    xyz[:, 0],\n",
+    "    xyz[:, 1],\n",
+    "    xyz[:, 2],\n",
+    "    scalars,\n",
+    "    scale_factor=0.1,\n",
+    "    scale_mode=\"none\",\n",
+    "    colormap=\"Blues\",\n",
+    "    resolution=20,\n",
+    ")\n",
+    "\n",
+    "pts.mlab_source.dataset.lines = np.array(list(G.edges()))\n",
+    "tube = mlab.pipeline.tube(pts, tube_radius=0.01)\n",
+    "mlab.pipeline.surface(tube, color=(0.8, 0.8, 0.8))\n",
+    "mlab.orientation_axes()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "18bae153-12a9-4e0d-bfc1-b210a8c89f76",
    "metadata": {},
