--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -14,6 +14,10 @@
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
     "\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual, Dropdown, Text, GridBox, VBox, HBox, Accordion, BoundedIntText, Checkbox, Layout, IntProgress, Tab, Image, Button\n",
+    "from IPython.display import display, Javascript\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
    ]
