--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -25,6 +25,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02951b07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Interactive Widget component(s)\n",
+    "\n",
+    "w_workspace_path = Text(value=workspace_path, placeholder='Enter workspace path', description='Workspace ', disabled=False)\n",
+    "w_responses = Dropdown(options=responses, value=responses[0], description='Response ', disabled=False)\n",
+    "w_total_dates = BoundedIntText(value=total_dates, description='Total dates ', min=1, max=50, step=1, disabled=False)\n",
+    "\n",
+    "w_rename_columns = Checkbox(value=is_rename_columns, description='Rename df.columns', disabled=False)\n",
+    "w_show_intra_day = Checkbox(value=show_intra_day, description='Show intraday', disabled=False)\n",
+    "w_show_term_behavior_plot = Checkbox(value=show_term_behavior_plot, description='Show term behavior', disabled=False)\n",
+    "\n",
+    "w_show_logs = Checkbox(value=show_logs, description='Show Logs', disabled=False)\n",
+    "w_show_profile_report = Checkbox(value=show_profile_report, description='Show Profile Report', disabled=False)\n",
+    "w_show_settings = Checkbox(value=show_settings, description='Show settings', disabled=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "942890ed",
    "metadata": {},
    "outputs": [],
