--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -25,6 +25,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "50e10c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = None\n",
+    "workspace_path = '20210711_160044_0x32eb876b82af807e'\n",
+    "alphas = list()\n",
+    "symbols = list()\n",
+    "total_dates = 5\n",
+    "dates = list()\n",
+    "response = None\n",
+    "is_rename_columns=True\n",
+    "show_intra_day=False\n",
+    "show_term_behavior_plot=False\n",
+    "show_logs=False\n",
+    "show_profile_report=False\n",
+    "show_settings=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "02951b07",
    "metadata": {},
    "outputs": [],
