--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -41,7 +41,8 @@
     "show_term_behavior_plot=False\n",
     "show_logs=False\n",
     "show_profile_report=False\n",
-    "show_settings=False"
+    "show_settings=False\n",
+    "responses=['y_0.001_adm3levelnotrade', 'y_0.0025_adm3levelnotrade', 'y_0.005_adm3levelnotrade', 'y_0.01_adm3levelnotrade']"
    ]
   },
   {
