--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -70,6 +70,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c85a758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Disable \"Rename df.columns\" when \"Show logs\" is selected\n",
+    "\n",
+    "def disable_rename(x):\n",
+    "    w_rename_columns.disabled = w_show_logs.value\n",
+    "    w_show_intra_day.disabled = w_show_logs.value\n",
+    "    w_show_term_behavior_plot.disabled = w_show_logs.value\n",
+    "    w_rename_columns.value = not w_show_logs.value\n",
+    "    \n",
+    "w_show_logs.observe(disable_rename, 'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d517daeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of all component(s) that needs to be displayed\n",
+    "\n",
+    "meta_data = [ w_workspace_path, w_responses, w_total_dates, w_rename_columns, w_show_intra_day, w_show_term_behavior_plot, w_show_logs, w_show_profile_report, w_show_settings ]\n",
+    "\n",
+    "grid_box = GridBox(meta_data, layout=Layout(grid_template_columns=\"repeat(3, 33.34%)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "942890ed",
    "metadata": {},
    "outputs": [],
