--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -394,9 +394,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('mgma')",
+   "display_name": "Py MGMA",
    "language": "python",
-   "name": "python3"
+   "name": "mgma"
   },
   "language_info": {
    "codemirror_mode": {
