--- a/src/lab1/src/notebooks/widgets_example.ipynb
+++ b/src/lab1/src/notebooks/widgets_example.ipynb
@@ -84,15 +84,39 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d517daeb",
+   "id": "e7f4c1bf-19c9-48a7-8dc5-af5cdb1833f6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# List of all component(s) that needs to be displayed\n",
     "\n",
-    "meta_data = [ w_workspace_path, w_responses, w_total_dates, w_rename_columns, w_show_intra_day, w_show_term_behavior_plot, w_show_logs, w_show_profile_report, w_show_settings ]\n",
-    "\n",
-    "grid_box = GridBox(meta_data, layout=Layout(grid_template_columns=\"repeat(3, 33.34%)\"))"
+    "meta_data = [ w_workspace_path, w_responses, w_total_dates, w_rename_columns, w_show_intra_day, w_show_term_behavior_plot, w_show_logs, w_show_profile_report, w_show_settings ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9c45346c-d23e-41aa-8377-e87c2c593495",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8004ab1e36e54035bd0e2eb4d199d6c3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Text(value='20210711_160044_0x32eb876b82af807e', description='Workspace ', placeholder='Ente…"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GridBox(meta_data, layout=Layout(grid_template_columns=\"repeat(3, 33.34%)\"))"
    ]
   },
   {
