--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -21,10 +21,42 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "942890ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, 'data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7dd135f6-6127-4b8a-a1cc-da56064a8a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DM-HT.txt', 'CE-HT.txt']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "50e10c6d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))] \n",
+    "\n",
     "df = None\n",
     "workspace_path = '20210711_160044_0x32eb876b82af807e'\n",
     "alphas = list()\n",
@@ -143,17 +175,6 @@
    ],
    "source": [
     "grid_box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "942890ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
-    "data_dir = join(parent_dir, 'data')"
    ]
   },
   {
