--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -31,22 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7dd135f6-6127-4b8a-a1cc-da56064a8a77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DM-HT.txt', 'CE-HT.txt']"
+       "['', '']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "[dirname(x) for x in listdir(data_dir) if isfile(join(data_dir, x))] "
+   ]
   },
   {
    "cell_type": "code",
@@ -56,6 +58,9 @@
    "outputs": [],
    "source": [
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))] \n",
+    "show_algo_comparsion=True\n",
+    "show_dataset_comparsion=False\n",
+    "\n",
     "\n",
     "df = None\n",
     "workspace_path = '20210711_160044_0x32eb876b82af807e'\n",
