--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -31,23 +31,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7dd135f6-6127-4b8a-a1cc-da56064a8a77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f8dcd89d-6054-434e-af84-070e1f4852b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['', '']"
+       "[['DM-HT'], ['CE-HT']]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[dirname(x) for x in listdir(data_dir) if isfile(join(data_dir, x))] "
+    "[x.split(\".\")[:-1].join(\"\") for x in data_files]"
    ]
   },
   {
@@ -57,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))] \n",
+    "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
     "show_algo_comparsion=True\n",
     "show_dataset_comparsion=False\n",
     "\n",
