Work in progress

--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -41,23 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "f8dcd89d-6054-434e-af84-070e1f4852b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['DM-HT'], ['CE-HT']]"
+       "['DM-HT', 'CE-HT']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[x.split(\".\")[:-1].join(\"\") for x in data_files]"
+    "[\".\".join(x.split(\".\")[:-1]) for x in data_files]"
    ]
   },
   {
