--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "7dd135f6-6127-4b8a-a1cc-da56064a8a77",
    "metadata": {},
    "outputs": [],
@@ -41,23 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "f8dcd89d-6054-434e-af84-070e1f4852b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DM-HT', 'CE-HT']"
+       "['DM-HT', 'CE-HT', 'CE-HT.1']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[\".\".join(x.split(\".\")[:-1]) for x in data_files]"
+    "file_names = [\".\".join(x.split(\".\")[:-1]) for x in data_files]"
    ]
   },
   {
