--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -39,6 +39,8 @@
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
     "show_algo_comparsion=True\n",
     "show_dataset_comparsion=False\n",
+    "no_of_algo=3\n",
+    "algos = []\n",
     "\n",
     "\n",
     "df = None\n",
