--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -37,11 +37,12 @@
    "outputs": [],
    "source": [
     "data_files = [x for x in listdir(data_dir) if isfile(join(data_dir, x))]\n",
+    "algos = []\n",
+    "no_of_algo=3\n",
     "show_algo_comparsion=True\n",
     "show_dataset_comparsion=False\n",
-    "no_of_algo=3\n",
-    "algos = []\n",
-    "\n",
+    "show_debug=False\n",
+    "show_verbose=False\n",
     "\n",
     "df = None\n",
     "workspace_path = '20210711_160044_0x32eb876b82af807e'\n",
