--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "50e10c6d",
    "metadata": {},
    "outputs": [],
@@ -41,23 +41,7 @@
     "no_of_algo=3\n",
     "show_algo_comparsion=True\n",
     "show_dataset_comparsion=False\n",
-    "show_debug=False\n",
-    "show_verbose=False\n",
-    "\n",
-    "df = None\n",
-    "workspace_path = '20210711_160044_0x32eb876b82af807e'\n",
-    "alphas = list()\n",
-    "symbols = list()\n",
-    "total_dates = 5\n",
-    "dates = list()\n",
-    "response = None\n",
-    "is_rename_columns=True\n",
-    "show_intra_day=False\n",
-    "show_term_behavior_plot=False\n",
-    "show_logs=False\n",
-    "show_profile_report=False\n",
-    "show_settings=False\n",
-    "responses=['y_0.001_adm3levelnotrade', 'y_0.0025_adm3levelnotrade', 'y_0.005_adm3levelnotrade', 'y_0.01_adm3levelnotrade']"
+    "show_verbose=False"
    ]
   },
   {
@@ -70,7 +54,7 @@
     "# Interactive Widget component(s)\n",
     "\n",
     "w_workspace_path = Text(value=workspace_path, placeholder='Enter workspace path', description='Workspace ', disabled=False)\n",
-    "w_responses = Dropdown(options=responses, value=responses[0], description='Response ', disabled=False)\n",
+    "w_responses = Dropdown(options=data_files, value=data_files[0], description='Dataset ', disabled=False)\n",
     "w_total_dates = BoundedIntText(value=total_dates, description='Total dates ', min=1, max=50, step=1, disabled=False)\n",
     "\n",
     "w_rename_columns = Checkbox(value=is_rename_columns, description='Rename df.columns', disabled=False)\n",
