--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -53,9 +53,8 @@
    "source": [
     "# Interactive Widget component(s)\n",
     "\n",
-    "w_workspace_path = Text(value=workspace_path, placeholder='Enter workspace path', description='Workspace ', disabled=False)\n",
-    "w_responses = Dropdown(options=data_files, value=data_files[0], description='Dataset ', disabled=False)\n",
-    "w_total_dates = BoundedIntText(value=total_dates, description='Total dates ', min=1, max=50, step=1, disabled=False)\n",
+    "w_dataset = Dropdown(options=data_files, value=data_files[0], description='Dataset ', disabled=False)\n",
+    "w_total_dates = BoundedIntText(value=total_dates, description='Total dates ', min=1, max=5, step=1, disabled=False)\n",
     "\n",
     "w_rename_columns = Checkbox(value=is_rename_columns, description='Rename df.columns', disabled=False)\n",
     "w_show_intra_day = Checkbox(value=show_intra_day, description='Show intraday', disabled=False)\n",
