--- a/src/lab1/src/notebooks/widgets_example1.ipynb
+++ b/src/lab1/src/notebooks/widgets_example1.ipynb
@@ -57,13 +57,9 @@
     "w_algo_list = Dropdown(options=algos, value=algos[0], description='Algorihtm ', disabled=False)\n",
     "# w_algo = BoundedIntText(value=no_of_algo, description='Total algo ', min=1, max=5, step=1, disabled=False)\n",
     "\n",
-    "w_rename_columns = Checkbox(value=is_rename_columns, description='Rename df.columns', disabled=False)\n",
-    "w_show_intra_day = Checkbox(value=show_intra_day, description='Show intraday', disabled=False)\n",
-    "w_show_term_behavior_plot = Checkbox(value=show_term_behavior_plot, description='Show term behavior', disabled=False)\n",
-    "\n",
-    "w_show_logs = Checkbox(value=show_logs, description='Show Logs', disabled=False)\n",
-    "w_show_profile_report = Checkbox(value=show_profile_report, description='Show Profile Report', disabled=False)\n",
-    "w_show_settings = Checkbox(value=show_settings, description='Show settings', disabled=False)"
+    "w_show_algo_comparsion = Checkbox(value=show_algo_comparsion, description='Show Algo. Comparsion', disabled=False)\n",
+    "w_show_dataset_comparsion = Checkbox(value=show_dataset_comparsion, description='Show Dataset Comparsion', disabled=False)\n",
+    "w_show_verbose = Checkbox(value=show_verbose, description='Show Verbose', disabled=False)"
    ]
   },
   {
@@ -73,15 +69,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Disable \"Rename df.columns\" when \"Show logs\" is selected\n",
+    "# # Disable \"Rename df.columns\" when \"Show logs\" is selected\n",
     "\n",
-    "def disable_rename(x):\n",
-    "    w_rename_columns.disabled = w_show_logs.value\n",
-    "    w_show_intra_day.disabled = w_show_logs.value\n",
-    "    w_show_term_behavior_plot.disabled = w_show_logs.value\n",
-    "    w_rename_columns.value = not w_show_logs.value\n",
+    "# def disable_rename(x):\n",
+    "#     w_rename_columns.disabled = w_show_logs.value\n",
+    "#     w_show_intra_day.disabled = w_show_logs.value\n",
+    "#     w_show_term_behavior_plot.disabled = w_show_logs.value\n",
+    "#     w_rename_columns.value = not w_show_logs.value\n",
     "    \n",
-    "w_show_logs.observe(disable_rename, 'value')"
+    "# w_show_logs.observe(disable_rename, 'value')"
    ]
   },
   {
